# cognexus

./: .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DELIVERY.md  Dockerfile  FAQ.md  MANIFEST.in  Makefile  QUICKSTART.md  README.md  SECURITY.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.codex/: instructions.md
.github/: dependabot.yml  pull_request_template.md
config/: __init__.py  agent_registry.json  settings.py  stack_manifest.json
constraints/: runtime.txt
deploy/: otel-collector-config.yaml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  ENTERPRISE_AUDIT.md  EVALS.md  FILE_INVENTORY.md  FINAL_PRODUCTION_READINESS_REPORT.md  GLOSSARY.md  NEXUS_PROMPT_CONTRACT.md  OPERATIONS.md  README.md  RELEASE_CHECKLIST.md  RESEARCH_BASELINE.md  SECURITY.md  SETUP.md  SETUP_AND_IMPLEMENTATION.md  SKILLS.md  SLO.md  THREAT_MODEL.md  UPGRADE_REPORT.md  USER_GUIDE.md  V3_3_0_ENTERPRISE_HARDENING_REPORT.md  V3_3_1_ENTERPRISE_FINALIZATION_REPORT.md  V3_3_1_PRODUCTION_READINESS_REPORT.md  V3_3_1_REPOSITORY_INVENTORY.md  VALIDATION_REPORT.md  migration_checklist.md
evals/: promptfoo.yaml
middleware/: __init__.py  constraint_validator.py  guardrails.py  input_guardrail.py  output_guardrail.py  trace_block_validator.py
nexus_agents/: __init__.py  base_agent.py  registry.py  specialists.py
observability/: __init__.py  logging.py  metrics.py  privacy.py  tracing.py
orchestrator/: __init__.py  conflict_resolver.py  errors.py  execution_modes.py  model_router.py  nexus_agent.py  nexus_prompt.py  response_metadata.py  run.py  runtime.py  skill_recommender.py  tier_classifier.py
scripts/: bootstrap.py  build_distribution.py  create_checksums.py  create_release_manifest.py  generate_repository_inventory.py  generate_sbom.py  install_skills.py  quality_gate.py  setup.sh  start.py  sync_skill_pack.py  test_nexus.py  validate_repository.py  verify_deployment.py  verify_distribution.py  verify_release.py  verify_runtime_lock.py  verify_version.py
security/: __init__.py  identifiers.py  policies.py  rate_limits.py  sanitization.py  secrets.py
server/: __init__.py  app.py  body_limit.py  dependencies.py  errors.py  middleware.py  run.py  schemas.py
sessions/: __init__.py  compaction.py  intelligence.py  redis_session.py  session_manager.py  sqlite_session.py
skill_runtime/: __init__.py  catalog.py  cli.py  loader.py  models.py  security.py  tools.py
skills/: catalog.yaml
tests/: conftest.py  test_bootstrap.py  test_cli.py  test_deployment_verification.py  test_docs_beginner.py  test_guardrails.py  (+19 more)
(+194 files in other folders)
