[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-openai"
version = "3.3.1"
description = "Cognexus production orchestration with portable Agent Skills on the OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dynamic = ["dependencies"]


[project.scripts]
cognexus = "orchestrator.run:main"
cognexus-server = "server.run:main"
cognexus-skills = "skill_runtime.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "config*",
  "middleware*",
  "nexus_agents*",
  "observability*",
  "orchestrator*",
  "security*",
  "server*",
  "sessions*",
  "tools*",
  "tracing*",
  "validators*",
  "skill_runtime*",
]
exclude = ["tests*"]

[tool.setuptools.package-data]
config = ["*.json"]
skill_runtime = ["bundled_skills/**/*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".venv", "data", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC", "RUF", "S", "PERF"]
ignore = ["E501", "RUF001", "RUF002"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
exclude = "(^data/|^artifacts/|^build/|^dist/|^nexus_openai-[^/]+/)"

[[tool.mypy.overrides]]
module = [
  "slowapi.*",
  "opentelemetry.*",
  "prometheus_client.*",
  "fakeredis.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "openai",
  "openai.*",
  "redis",
  "redis.*",
]
# These typed SDKs expose very large, highly recursive module graphs. Treat them
# as integration boundaries so strict checking remains fast and deterministic for
# Cognexus-owned code instead of re-type-checking thousands of dependency modules.
follow_imports = "skip"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "integration: requires external services or an OpenAI API key",
]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["orchestrator", "server", "sessions", "middleware", "validators", "security", "observability", "tools", "nexus_agents", "skill_runtime"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70
